--- a/source/less/form.less
+++ b/source/less/form.less
@@ -50,9 +50,27 @@
 }
 
 .form__data {
+  .indent-reset();
   display: flex;
   flex-direction: column;
   //border: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .form__data {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    //border: 1px solid red;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__data {
+    width: 940px;
+    align-items: flex-end;
+  }
 }
 
 .form__fullname {
@@ -61,6 +79,61 @@
   flex-direction: column;
   align-items: flex-start;
   //border: 1px solid green;
+}
+
+@media (min-width: @tablet-width) {
+  .form__fullname {
+    margin: 0 auto;
+    width: 620px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    order: -3;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__fullname {
+    padding: 0;
+    margin: 0;
+    width: 433px;
+    align-content: flex-end;
+    align-items: flex-end;
+    }
+}
+
+@media (min-width: @tablet-width) {
+  .form__fullname .form__field {
+    width: 525px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__fullname .form__field {
+    margin-bottom: 0;
+    margin-top: 52px;
+    width: 341px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field--name {
+    margin-left: 20px;
+    flex-grow: 1;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__fullname .form__field-title {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__fullname .form__field-title {
+    margin-bottom: 18px;
+  }
 }
 
 .form__field-title {
@@ -91,13 +164,42 @@
 }
 
 .form__progress {
+  margin: 0 auto;
+  box-sizing: border-box;
+  width: 320px;
   padding-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  flex-wrap: wrap;
   position: relative;
   border: none;
   background-color: #f2f2f2;
+}
+
+@media (min-width: @tablet-width) {
+  .form__progress {
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 69px;
+    padding-top: 58px;
+    width: 620px;
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__progress {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 60px;
+    margin: 0 auto;
+    margin-top: 69px;
+    padding-top: 58px;
+    width: 940px;
+    box-sizing: border-box;
+  }
 }
 
 .form__titles {
@@ -113,7 +215,16 @@
   top: 40px;
   margin-left: -113px;
   width: 226px;
-  //border: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .form__titles--progress {
+    width: 374px;
+    margin-left: -219px;
+    padding: 0 32px;
+    top: -12px;
+    background-color: #ffffff;
+  }
 }
 
 .form__progress-name {
@@ -128,6 +239,18 @@
   //border: 1px solid red;
 }
 
+@media (min-width: @tablet-width) {
+  .form__progress-name {
+    margin-left: 120px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__progress-name {
+    margin-left: 60px;
+  }
+}
+
 .form__progress-name::before {
   position: absolute;
   left: -85px;
@@ -140,6 +263,40 @@
   border: 2px solid #e5e5e5;
 }
 
+@media (min-width: @desktop-width) {
+  .form__progress-name::before {
+    left: -60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__progress-name--shark {
+    order: 1;
+  }
+
+  .form__progress-name--chuck {
+    margin-right: 27px;
+    order: 2;
+  }
+
+  .form__progress-name--souvenir {
+    order: 5;
+  }
+
+  .form__progress-name--tower {
+    margin-right: 5px;
+    order: 3;
+  }
+
+  .form__progress-name--hotel {
+    order: 6;
+  }
+
+  .form__progress-name--beach {
+    order: 4;
+  }
+}
+
 .form__progress-checkbox:checked + .form__progress-name::before {
   background-image: url("../img/icon-yes.svg");
   background-repeat: no-repeat;
@@ -147,14 +304,138 @@
 }
 
 .form__contacts {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   border: none;
 }
 
+@media (min-width: @tablet-width) {
+  .form__contacts {
+    padding: 0 60px;
+    margin: 0 auto;
+    margin-top: 69px;
+    padding-top: 58px;
+    width: 620px;
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+    box-sizing: border-box;
+    order: -1;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__contacts {
+    width: 940px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+  }
+}
+
 .form__titles--contacts {
   display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .form__titles--contacts {
+    display: block;
+    position: absolute;
+    left: 50%;
+    margin-left: -140px;
+    width: 280px;
+    padding: 0 32px;
+    box-sizing: border-box;
+    top: -12px;
+    background-color: #ffffff;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field--phone {
+    width: 440px;
+    margin-bottom: 12px;
+    order: -1;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field--email {
+    width: 440px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__field--phone {
+    width: 315px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field--email {
+    margin-top: 31px;
+    margin-bottom: 12px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__field--email {
+    margin-top: 0;
+    margin-right: 60px;
+    margin-left: auto;
+    width: 315px;
+    order: -1;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field-title--email {
+    position: relative;
+    order: 1;
+    margin-bottom: 25px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field-title--phone {
+    position: relative;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field-icon {
+      position: absolute;
+      left: 417px;
+      top: -74px;
+      width: 61px;
+      height: 62px;
+
+      background-image: url("../img/icon-mail.svg");
+      background-color: #e5e5e5;
+      background-repeat: no-repeat;
+      background-position: center;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__field-icon--phone {
+      background-image: url("../img/icon-phone.svg");
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__field-icon {
+      left: 292px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__field-title--email {
+    margin-left: auto;
+    margin-right: 255px;
+    width: 100px;
+  }
 }
 
 .form__application {
@@ -167,6 +448,30 @@
   background-color: #f2f2f2;
 }
 
+@media (min-width: @tablet-width) {
+  .form__application {
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 69px;
+    padding-top: 58px;
+    width: 620px;
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+    order: -2;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__application {
+    margin: 0;
+    padding-top: 60px;
+    width: 435px;
+    justify-content: flex-start;
+    height: 300px;
+    box-sizing: border-box;
+  }
+}
+
 .form__titles--application {
   position: absolute;
   left: 50%;
@@ -174,6 +479,16 @@
   margin-left: -113px;
   width: 226px;
   //border: 1px solid red;
+}
+
+@media (min-width: @tablet-width) {
+  .form__titles--application {
+    width: 320px;
+    margin-left: -184px;
+    padding: 0 24px;
+    top: -12px;
+    background-color: #ffffff;
+  }
 }
 
 .form__app-environ {
@@ -185,6 +500,12 @@
   line-height: 30px;
   font-weight: 400;
   color: #283645;
+}
+
+@media (min-width: @tablet-width) {
+  .form__app-environ {
+    margin-left: 120px;
+  }
 }
 
 .form__app-environ::before {
@@ -213,7 +534,35 @@
 }
 
 .form__emotions {
+  position: relative;
   border: none;
+}
+
+@media (min-width: @tablet-width) {
+  .form__emotions {
+    padding: 0;
+    margin: 0 auto;
+    margin-top: 69px;
+    padding-top: 45px;
+    padding-bottom: 51px;
+    width: 620px;
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__emotions {
+    padding: 0 60px;
+    margin: 0 auto;
+    margin-top: 69px;
+    padding-top: 45px;
+    padding-bottom: 51px;
+    width: 940px;
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+    box-sizing: border-box;
+  }
 }
 
 .form__titles--emotions {
@@ -222,11 +571,41 @@
   margin-bottom: 20px;
 }
 
+@media (min-width: @tablet-width) {
+  .form__titles--emotions {
+    position: absolute;
+    width: 262px;
+    left: 50%;
+    margin-left: -131px;
+    padding: 0 24px;
+    top: -52px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    //border: 1px solid red;
+  }
+}
+
 .form__field--emotions {
   width: 280px;
   min-height: 197px;
   padding-left: 20px;
-  //padding-right: 20px;
+  resize: none;
+  font-family: inherit;
+  padding-right: 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .form__field--emotions {
+    width: 500px;
+    min-height: 190px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__field--emotions {
+    width: 100%;
+    min-height: 190px;
+  }
 }
 
 .form__send {
@@ -244,6 +623,22 @@
   border: none;
 }
 
+@media (min-width: @tablet-width) {
+  .form__send {
+    margin: 0;
+    margin-top: 68px;
+    margin-left: 20px;
+    width: 300px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__send {
+    margin-left: 0;
+    width: 300px;
+  }
+}
+
 .form__necessarily {
   margin-top: 36px;
   font-size: 14px;
@@ -255,5 +650,23 @@
 
   span {
     display: none;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .form__necessarily {
+    margin-right: 20px;
+    margin-top: 68px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .form__necessarily {
+    margin-right: 0;
+    margin-top: 68px;
+
+    span {
+      display: inline-block;
+    }
   }
 }
